pxc/tests/test_019_thread/chkmt4.px
public namespace chkmt4;
import common -;

multithreaded struct foo(ptr{int} p) { // error
}
// ARGUABLE
// non-mt types are allowed for function/constr args?

